--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,8 @@ perl:
     - "5.18"
     - "5.14"
 
-before_install:
-    - git config --global user.name "TravisCI"
-    - git config user.email 'travis@nowhere.dne'
-
 install:
-    - pwd
-    - ls -la
-    - cpanm --verbose --notest --skip-satisfied --installdeps .
+    - cpanm --notest --skip-satisfied --installdeps .
 
 script:
     - make dirs
